--- a/intermiddle/intermiddle/static/css/Login/login.css
+++ b/intermiddle/intermiddle/static/css/Login/login.css
@@ -102,3 +102,15 @@ h1{
     display: block;
     color: red;
 }
+.InputDefault::-webkit-input-placeholder {
+    color: white;
+ }
+ .InputDefault:-moz-placeholder {
+    color: white;
+ }
+ .InputDefault::-moz-placeholder{
+    color: white;
+ }
+ .InputDefault:-ms-input-placeholder {
+    color: white;
+ }
