--- a/intermiddle/intermiddle/static/css/page.css
+++ b/intermiddle/intermiddle/static/css/page.css
@@ -48,7 +48,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 600px;
+    max-width: 600px;
+    max-height: 600px;
+    
     
 }
 .ImageUpperC1{
@@ -641,4 +643,8 @@ body{
     .C4-AllComents{
         margin-top: 300px;
     }
+}
+
+.no{
+   display: none; 
 }
